<resources>
    <string name="app_name">Fun Magicity</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_routing">RoutingActivity</string>


    <string name="login_username">用户名</string>
    <string name="login_password">密 码</string>
    <string name="login_re_password">确认密码</string>
    <string name="btn_login">登 录</string>
    <string name="btn_register">注 册</string>
    <string name="title_activity_md_login">MdLoginActivity</string>


    <string name="login_success">登录成功～</string>
    <string name="login">登录</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="go">登录</string>
    <string name="repeat_password">重复密码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>

    <string name="label1">出行小伙伴</string>
    <string name="label2">旅行风格</string>

    <item type="id" name="tag_viewholder"></item>
    <item type="id" name="tag_item_click"></item>
</resources>
